src/app/categories/styles/_liste.scss
.categories {
    list-style: none;
    display: flex;
    flex-direction: column;
    padding: 0;
    height: 100%;
    .category {
        flex: 1;
        order: 1;
        position: relative;
        background: $light-grey;
        color: $dark-grey;
        width: 70px;
        max-height: 50px;
        min-height: 0;
        overflow: hidden;
        border-bottom: 1px solid $neutral-grey;
        transition: width 0.1s ease-out, min-height 0s ease-out;
        @include categories-list-coloring();
        button {
            width: 70px;
            height: 50px;
            padding: 1em;
            z-index: 14;
            border: none;
            background: white;
            box-shadow: none;
            transition: width 0.1s ease-out;
            svg {
                height: 100%;
                fill: $primary-color;
            }
            span {
                position: relative;
                top: -5px;
                padding: 0 1em;
                left: 200%;
                transition: left 0.1s ease-out;
            }
            &:focus {
                outline: none;
                outline-color: transparent;
                outline-style: none;
                box-shadow: 0px 1px 2px 0px $dark-grey;
            }
        }
        &:hover {
            width: 300px;
            min-height: 100%;
            z-index: 99;
            transition-delay: 0.4s;
            & > button {
                width: 300px;
                transition-delay: 0.4s;
                & > span {
                    left: 0;
                    transition-delay: 0.5s;
                }
            }
            .filters {
                .category-name > span {
                    left: 0;
                    transition-delay: 0.6s;
                }
                .selector {
                    left: 0;
                }
            }
        }
        &.active {
            color: white;
            button {
                background: $dark-grey;
                svg {
                    fill: white;
                }
            }
            .choices .form-group input {
                & + label:before {
                    border-color: white;
                }
                &:checked + label:before {
                    background: white;
                }
            }
        }
        .filters {
            width: 300px;
            z-index: 12;
            transition: all 0.1s ease-out;
            .category-name {
                width: 300px;
                height: 47px;
                padding: 1em;
                & > span {
                    position: relative;
                    left: -100%;
                    transition: all 0.1s ease-out;
                    
                }
            }
            form {
                width: 300px;
                height: 100%;
                padding: 0;
            }
            .selector {
                margin: 0;
                width: 100%;
                position: relative;
                transition: all 0.1s ease-out;
                position: relative;
                left: 200%;
                &.empty {
                    display: none;
                }
                & > span {
                    display: block;
                    padding: 1em;
                    cursor: pointer;
                    i {
                        margin-right: 1em;
                        transition: all 0.3s ease-out;
                    }
                }
                &.opened span i {
                    transform: rotate(225deg);
                }
                &:hover, &:focus {
                    transition-delay: 0.4s;
                }
            }
            
        }

        .choices {
            width: 100%;
            overflow: hidden;
            z-index: 11;
            .form-group {
                margin: 0;
                position: relative;
                input {
                    display: block;
                    position: absolute;
                    cursor: pointer;
                    color: white;
                    opacity: 0;
                    top: 0;
                    left: 0;
                    height: 100%;
                    width: 100%;
                    margin: 0;
                    z-index: 11;
                    &:checked + label:before {
                        background: $dark-grey;
                    }
                    &:focus {
                        outline: none;
                        outline-color: transparent;
                        outline-style: none;
                        box-shadow: 0px 1px 2px 0px $dark-grey;
                    }
                }
                label {
                    margin: 0;
                    width: 100%;
                    padding: 1em;
                    font-weight: normal;
                    &:before {
                        content: '';
                        display: inline-block;
                        vertical-align: middle;
                        width: 1em;
                        height: 1em;
                        margin-right: 1em;
                        border: 1px solid $dark-grey;
                        border-radius: 0.5em;
                        transition: all 0.2s ease-out;
                    }
                }
            }
        }

    }
}

